--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,9 @@
         "php": "^8.0"
     },
     "require-dev": {
-        "pestphp/pest": "^3.0|^4.0",
+        "pestphp/pest": "^2.0",
         "laravel/pint": "^1.0",
-        "phpstan/phpstan": "^2.0",
+        "phpstan/phpstan": "^1.10|^2.0",
         "phpstan/extension-installer": "^1.3"
     },
     "autoload": {
