--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "php": "^8.0"
     },
     "require-dev": {
-        "pestphp/pest": "^2.0",
+        "pestphp/pest": "^1.21|^2.0",
         "laravel/pint": "^1.0",
         "phpstan/phpstan": "^1.10|^2.0",
         "phpstan/extension-installer": "^1.3"
